--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ background-image: url("kira.png")
 <h2 class="p1">Neki od zabavnih linkova!</h2>
 <nav>
 	<ul>
-		<li><a href="C:\Users\38599\Desktop\Digitalni Multimedij Projektni Zadatak 3\1. HTML/o meni.html">O meni!</a></li>
-		<li><a href="C:\Users\38599\Desktop\Digitalni Multimedij Projektni Zadatak 3\1. HTML/vjezbe.html">Vježbe!</a></li>
-		<li><a href="C:\Users\38599\Desktop\Digitalni Multimedij Projektni Zadatak 3\1. HTML/video.html">Video!</a></li>
+		<li><a href="o meni.html">O meni!</a></li>
+		<li><a href="vjezbe.html">Vježbe!</a></li>
+		<li><a href="video.html">Video!</a></li>
 	</ul>
 </nav>
 </body>
