--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Glavna Stanica
 <body>
 <style>
 body{
-background-image: url("kira.png")
+background-image: url("kira.png");
 }
 </style>
 <div class="myDivgreen">
